--- a/optuna_hpo.ipynb
+++ b/optuna_hpo.ipynb
@@ -1358,7 +1358,7 @@
     "        n_startup_trials=5, n_warmup_steps=30, interval_steps=10\n",
     "    ),\n",
     ")\n",
-    "study.optimize(objective, n_trials=500, n_jobs=-1)\n",
+    "study.optimize(lambda trial: objective(trial, X_train_smote, y_train_smote, X_test, Y_test), n_trials=500, n_jobs=-1)\n",
     "\n",
     "trial = study.best_trial\n",
     "print('Accuracy: {}'.format(trial.value))\n",
